@@ -3,6 +3,9 @@ plugins {
   id 'org.openjfx.javafxplugin' version '0.0.13'
   id 'eclipse'
   id 'org.beryx.jlink' version '2.25.0'
+  
+  // pour les tests ... adds 'test' task
+  id 'java'
 }
 
 repositories {
@@ -29,6 +32,9 @@ dependencies {
 	implementation 'org.openjfx:javafx-swing:17.0.6'
 	implementation 'org.openjfx:javafx-web:17.0.6'
 	implementation 'org.openjfx:javafx-swt:17.0.6'
+	
+	// test junit 4
+	testImplementation 'junit:junit:4.13'
 }
 
 
@@ -83,3 +89,35 @@ task printJars {
             }
         }
     }
+ 
+test {
+	useJUnit
+	
+   systemProperty 'some.prop', 'value'
+   
+   // explicitly include or exclude tests
+   include 'org/foo/**'
+   exclude 'org/boo/**'
+
+   // show standard out and standard error of the test JVM(s) on the console
+   testLogging.showStandardStreams = true
+
+   // set heap size for the test JVM(s)
+   minHeapSize = "128m"
+   maxHeapSize = "512m"
+
+   // set JVM arguments for the test JVM(s)
+   jvmArgs '-XX:MaxPermSize=256m'
+   
+   // listen to events in the test execution lifecycle
+   beforeTest { 
+      descriptor -> logger.lifecycle("Running test: " + descriptor)
+   }
+
+   // listen to standard out and standard error of the test JVM(s)
+   onOutput { 
+      descriptor, event -> logger.lifecycle
+         ("Test: " + descriptor + " produced standard out/err: " 
+         + event.message )
+   }
+}
